# crypto_bot

./: .gitignore  Makefile  pyproject.toml  run_echo.py  settings.py
bot/: worker.py
brokers/: kafka_client.py
clients/market/: api.py
clients/redis/: redis_client.py
clients/tg/: api.py  dcs.py
common/: constants.py  model.py  utils.py
db/: pg_client.py  pg_usage.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
src/: courses.py
